--- a/style.css
+++ b/style.css
@@ -475,7 +475,8 @@ dotlottie-wc{
     section .home-content .social-icons a{
         width: 30px;
         height: 30px;
-        font-size: 15px;
+        font-size: 18px;
+        border: 0.5px solid #fff;
     }
 }
 @media (max-width: 600px){
@@ -505,6 +506,7 @@ dotlottie-wc{
         display: flex;
         justify-content: space-between;
         margin-left: 34%;
+        align-items:center;
     }
     .about{
         position: relative;
@@ -514,6 +516,7 @@ dotlottie-wc{
         flex-direction: column-reverse;
         padding: 0;
         text-align: center;
+        margin-top: 20px;
     }
     .about-content{
         max-width: 92%;
@@ -523,21 +526,30 @@ dotlottie-wc{
         font-weight: 600;
         text-align: center;
         position: relative;
-        top: -220px;
+        top: -290px;
     }
     .about .about-img img{
         right: 0;
     }
-}
-@media (max-width: 500px){
-    .education{
-        padding-top: 0;
+    .about .about-img{
+        width: 70%;
     }
+    section .home-content .social-icons a{
+        font-size: 18px;
+        border: 0.5px solid #fff;
+    }
+}
+
+@media (max-width: 570px){
     .contact .illustration{
         display: none;
     }
     .contact{
-        padding-left: 12rem;
+        padding:0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 10px;
     }
     .form form .input-box .input-field{
         width: 100%;
@@ -551,5 +563,87 @@ dotlottie-wc{
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 550px){
+    .about .about-content .heading{
+        top: -270px;
+    }
+    .about .about-img{
+        width: 75%;
+    }
+    .about .about-img{
+        width: 75%;
+    }
+    section .home-content .social-icons{
+        position: absolute;
+        margin-left: 35%;
+    }
+}
+@media (max-width: 500px){
+    .education{
+        padding-top: 0;
+    }
+    .contact .illustration{
+        display: none;
+    }
+    .contact{
+        padding:0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    section .home-content .social-icons{
+        position: absolute;
+        margin-left: 34%;
+        bottom: 0rem;
+    }
+}
+@media (max-width: 450px){
+    .about .about-content .heading{
+        top: -250px;
+    }
+    .about .about-img{
+        width: 80%;
+    }
+    .about .about-img{
+        width: 80%;
+    }
+    section .home-content .social-icons{
+        position: absolute;
+        margin-left: 32%;
+        bottom: 0rem;
+    }
+}
+@media (max-width: 420px){
+    section .home-content .social-icons{
+        position: absolute;
+        margin-left: 31%;
+        bottom: 0rem;
+    }
+}
+@media (max-width: 400px){
+    section .home-content .social-icons{
+        position: absolute;
+        margin-left: 30%;
+        bottom: 0rem;
+    }
+}
+@media (max-width: 350px){
+    .about .about-content .heading{
+        top: -220px;
+    }
+    .about .about-img{
+        width: 90%;
+    }
+    .about .about-img{
+        width: 90%;
+    }
+    section .home-content .social-icons{
+        position: absolute;
+        margin-left: 27%;
+        bottom: 0rem;
     }
 }
